Deployed the app

--- a/app/docs/blockchain/1.md
+++ b/app/docs/blockchain/1.md
@@ -39,7 +39,7 @@ A blockchain is an extension of the _State Machine Replication (SMR)_ model. In 
 
 ---
 
-:::tip Definition
+:::tip DEFINITION
 :::
 
 Let $S$ be a set of states, $T$ be a set of transactions, and $f$ be the function that maps a state and a transaction to a new state.
@@ -85,7 +85,7 @@ A _Consensus Algorithm_ is a mechanism used in distributed systems to achieve ag
 
 ---
 
-:::info Assumptions
+:::info ASSUMPTIONS
 :::
 
 An algorithm reaches consensus under the following assumptions:
@@ -108,7 +108,7 @@ In a _Synchronous_ network, all nodes are assumed to have synchronized clocks an
 
 ---
 
-:::info Assumptions
+:::info ASSUMPTIONS
 :::
 
 This model assumes that:
@@ -131,7 +131,7 @@ In a _Partial Synchronous_ network, there are some guarantees about message deli
 
 ---
 
-:::info Assumptions
+:::info ASSUMPTIONS
 :::
 
 This model assumes that:
